# simple-youtube-comment-extractor

./: Cargo.toml  README.md
src/: consts.rs  error.rs  main.rs
src/cli/: mod.rs  run.rs
