[package]
name = "simple-youtube-comment-extrator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple-youtube-comment-extrator"
path = "src/main.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
exitcode = "1"
mimalloc = "0.1"
snafu = { version = "0.7", default-features = false, features = ["std", "futures"] }
